welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: not enough arguments for method update: (i: Int, x: Nothing)Unit.
Unspecified value parameter x.
      T()=k
         ^